# rust-tracing-otlp

./: .gitignore  Cargo.toml  README.md
src/: main.rs
