[package]
name = "rust-tracing-otlp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version="4.4.0" }
actix-service = "2.0.2"
opentelemetry = { version = "=0.21", default-features = false, features = [ "trace" ]}
opentelemetry-otlp = { version = "=0.14", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"]}
rand = { version = "0.8", features = ["log"] }
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.9", features = ["tls", "tls-roots"]}
tracing = "0.1"
tracing-actix-web = "0.7.9"
tracing-opentelemetry = "=0.22"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
