[package]
name = "rust-tracing-otlp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version="4.5.1" }
actix-service = "2.0.2"
opentelemetry = { version = "=0.23.0", default-features = false, features = ["trace"]}
opentelemetry-otlp = { version = "=0.16.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"]}
rand = { version = "0.8", features = ["log"] }
tokio = { version = "1.39.3", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"]}
tracing = "0.1"
tracing-actix-web = { version = "0.7.11", features = ["opentelemetry_0_23"]}
tracing-opentelemetry = "=0.24.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
opentelemetry_sdk = { version = "=0.23.0", features = ["rt-tokio"] }
