[package]
name = "rust-tracing-otlp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version="4.5.1" }
actix-service = "2.0.2"
opentelemetry = { version = "=0.29.1", default-features = false, features = ["trace"]}
opentelemetry_sdk = { version = "=0.29.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "=0.29.0", features = ["grpc-tonic", "reqwest-client", "reqwest-rustls", "http-proto", "tls"]}
rand = { version = "0.9", features = ["log"] }
tokio = { version = "1.44", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"]}
tracing = "0.1"
tracing-actix-web = { version = "0.7.18", features = ["opentelemetry_0_29"]}
tracing-opentelemetry = "=0.30.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
